holyc-parser/tests/corpus/passing/046-expr-expr-bin-le.hc
I64 e_le  = 1 <= 2;
