holyc-parser/tests/corpus/failing/009-bug-compat-bug-ternary-not-supported.hc
I64 bt_x=1; I64 bt_y = bt_x ? 1 : 2;
